--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         container_name: jenkins
         restart: always
         volumes:
-            - /jenkins:/var/jenkins
+            - /jenkins:/var/jenkins_home
         ports:
             - 8081:8080
         privileged: true
